# hive

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  docker-compose.yaml  pyproject.toml
observatory/: .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  __init__.py  __main__.py  adjacency.py  api.py  config.py  decimator.py  docker-compose.yml  mqtt_subscriber.py  pyproject.toml  region_reader.py  region_registry.py  retained_cache.py  ring_buffer.py  service.py  types.py  ws.py
observatory/memory/: decisions.md
observatory/prompts/: task-01-scaffolding.md  task-02-retained-cache-and-region-registry.md  task-03-adjacency-and-decimator.md  task-04-mqtt-subscriber.md  task-05-rest-api.md  task-06-websocket-hub.md  task-07-service-assembly.md  task-08-component-e2e.md  task-09-frontend-scaffolding.md  task-10-ws-rest-store.md  task-11-scene-force-graph.md  task-12-region-meshes.md  task-13-sparks.md  task-14-modulator-fog-rhythm.md  task-15-hud.md  task-16-final-integration.md  v2-task-13-prompt-stm-jsontree.md  v2-task-14-messages.md  v3-task-01-appendix-route.md  v3-task-02-store-dock-state.md  v3-task-03-rest-hook-parser.md  v3-task-04-dock-shell.md  v3-task-05-firehose.md  v3-task-06-topics.md  v3-task-07-metacog.md  v3-task-08-appendix-section.md  v3-task-09-hud-tiles.md  v3-task-10-messages-expand.md  v4-task-01-sensory-skeleton.md  v4-task-02-sensory-publisher.md  v4-task-03-route-and-wiring.md  v4-task-04-component-test.md  v4-task-06-store-chat-slice.md  v4-task-07-chat-api.md  v4-task-08-transcript.md  v4-task-09-chat-input.md  v4-task-10-chat-overlay.md  v4-task-11-use-chat-keys.md  v4-task-12-app-mount.md
observatory/scripts/: publish_continuous_traffic.py  publish_demo_traffic.py
observatory/sensory/: __init__.py  allowlist.py  errors.py  publisher.py  routes.py
region_template/: capability.py  config_loader.py  config_schema.json  defaults.yaml  errors.py  git_tools.py  litellm.config.yaml  llm_adapter.py  llm_cache.py  logging_setup.py  memory.py  mqtt_client.py  prompt_assembly.py  pyproject.toml  runtime.py  self_modify.py  sleep.py  token_ledger.py  types.py
src/glia/: Dockerfile  (+8 more)
(+381 files in other folders)
