[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "hive-observatory"
version = "0.1.0"
description = "Read-only 3D visual instrument for Hive (v0+)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "aiomqtt>=2.0,<3",
  "pydantic>=2.6",
  "structlog>=24",
  "ruamel.yaml",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "testcontainers[mqtt]>=4.5",
]
