[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "hive-region-template"
version = "0.1.0"
description = "Runtime DNA shared by all Hive regions (v0)"
requires-python = ">=3.11"
dependencies = [
  "aiomqtt>=2.0,<3",
  "litellm>=1.54,<2",
  "ruamel.yaml",
  "structlog>=24",
  "jsonschema>=4.20",
  "pydantic>=2.6",
  "GitPython>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "testcontainers>=4",
]

[project.urls]
Repository = "https://github.com/hive-local/hive"
