[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "hive-glia"
version = "0.1.0"
description = "Infrastructure layer for Hive (v0)"
requires-python = ">=3.11"
dependencies = [
  "docker>=7",
  "jinja2",
  "aiomqtt>=2.0,<3",
  "ruamel.yaml",
  "structlog>=24",
  "prometheus-client",
  "jsonschema>=4.20",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "testcontainers>=4",
]

[project.urls]
Repository = "https://github.com/hive-local/hive"
